Little less spacing in coverage schedules (avoid category clipping)

--- a/app/assets/stylesheets/angular/clients.css.scss
+++ b/app/assets/stylesheets/angular/clients.css.scss
@@ -526,7 +526,7 @@ label.changed {
 
   > * {
     @include box-sizing(border-box);
-    padding: 20px;
+    padding: 15px;
   }
 
   .pure-control-group {
